--- a/crudelicious/Views/Home/Edit.cshtml
+++ b/crudelicious/Views/Home/Edit.cshtml
@@ -4,7 +4,7 @@
 <h1 class="text-center mb-5">Edit Banh Mi Taco!</h1>
 <a href="/" class="mb-5">Home</a>
 @model Recipe
-<form action="/update/1" method="POST" class="mt-5">
+<form action="/update/@Model.RecipeId" method="POST" class="mt-5">
     <div class="row">
         <div class="col-4">
             <div class="form-group">
