--- a/bank/Views/Home/Index.cshtml
+++ b/bank/Views/Home/Index.cshtml
@@ -4,40 +4,41 @@
 <h1 class="display-4">@ViewData["Title"]</h1>
 <div class="row">
     <div class="col-8">
-        <form class="mt-5" asp-action="" asp-controller="" method="POST">
-            <span class="text-danger"></span>
+        @model Account
+        <form class="mt-5" asp-action="Registration" asp-controller="Home" method="POST">
+            <span class="text-danger" asp-validation-for="FirstName"></span>
             <div class="form-group row">
-                <label for="FirstName" class="col-sm-3 col-form-label">First Name</label>
+                <label asp-for="FirstName" class="col-sm-3 col-form-label">First Name</label>
                 <div class="col-sm-9">
-                    <input type="text" class="form-control" id="FirstName" placeholder="First name">
+                    <input asp-for="FirstName" type="text" class="form-control" id="FirstName" placeholder="First name">
                 </div>
             </div>
-            <span class="text-danger"></span>
+            <span class="text-danger" asp-validation-for="LastName"></span>
             <div class="form-group row">
-                <label for="LastName" class="col-sm-3 col-form-label">Last Name</label>
+                <label asp-for="LastName" class="col-sm-3 col-form-label">Last Name</label>
                 <div class="col-sm-9">
-                    <input type="text" class="form-control" id="LastName" placeholder="Last name">
+                    <input asp-for="LastName" type="text" class="form-control" id="LastName" placeholder="Last name">
                 </div>
             </div>
-            <span class="text-danger"></span>
+            <span class="text-danger" asp-validation-for="Email"></span>
             <div class="form-group row">
-                <label for="Email" class="col-sm-3 col-form-label">Email</label>
+                <label asp-for="Email" class="col-sm-3 col-form-label">Email</label>
                 <div class="col-sm-9">
-                    <input type="email" class="form-control" id="Email" placeholder="Email">
+                    <input asp-for="Email" type="email" class="form-control" id="Email" placeholder="Email">
                 </div>
             </div>
-            <span class="text-danger"></span>
+            <span class="text-danger" asp-validation-for="Password"></span>
             <div class="form-group row">
-                <label for="Password" class="col-sm-3 col-form-label">Password</label>
+                <label asp-for="Password" class="col-sm-3 col-form-label">Password</label>
                 <div class="col-sm-9">
-                    <input type="password" class="form-control" id="Password" placeholder="Password">
+                    <input asp-for="Password" type="password" class="form-control" id="Password" placeholder="Password">
                 </div>
             </div>
-            <span class="text-danger"></span>
+            <span class="text-danger" asp-validation-for="Confirm"></span>
             <div class="form-group row">
-                <label for="Confirm" class="col-sm-3 col-form-label">Confirm Password</label>
+                <label asp-for="Confirm" class="col-sm-3 col-form-label">Confirm Password</label>
                 <div class="col-sm-9">
-                    <input type="password" class="form-control" id="Confirm" placeholder="Password">
+                    <input asp-for="Confirm" type="password" class="form-control" id="Confirm" placeholder="Confirm Password">
                 </div>
             </div>
             <button type="submit" class="btn btn-dark btn-lg mt-3">Submit</button>
