--- a/bank/Views/Home/Login.cshtml
+++ b/bank/Views/Home/Login.cshtml
@@ -2,22 +2,22 @@
     ViewData["Title"] = "Login";
 }
 <h1>@ViewData["Title"]</h1>
-
 <div class="row">
     <div class="col-8">
-        <form class="mt-5" asp-action="" asp-controller="" method="POST">
-            <span class="text-danger"></span>
+@model Login
+        <form class="mt-5" asp-action="LoginCheck" asp-controller="Home" method="POST">
+            <span class="text-danger" asp-validation-for="LoginEmail"></span>
             <div class="form-group row">
-                <label for="Email" class="col-sm-3 col-form-label">Email</label>
+                <label asp-for="LoginEmail" class="col-sm-3 col-form-label">Email</label>
                 <div class="col-sm-9">
-                    <input type="email" class="form-control" id="Email" placeholder="Email">
+                    <input asp-for="LoginEmail" type="email" class="form-control" id="LoginEmail" placeholder="Email">
                 </div>
             </div>
-            <span class="text-danger"></span>
+            <span class="text-danger" asp-validation-for="LoginPassword"></span>
             <div class="form-group row">
-                <label for="Password" class="col-sm-3 col-form-label">Password</label>
+                <label asp-for="LoginPassword" class="col-sm-3 col-form-label">Password</label>
                 <div class="col-sm-9">
-                    <input type="password" class="form-control" id="Password" placeholder="Password">
+                    <input asp-for="LoginPassword" type="password" class="form-control" id="LoginPassword" placeholder="Password" value="12345678">
                 </div>
             </div>
             <button type="submit" class="btn btn-dark btn-lg mt-3">Submit</button>
